Layout  * make main-contents slightly wider to prevent overlaps  * make classes listview name column slightly wider to prevent overlap

--- a/static/css/aowow.css
+++ b/static/css/aowow.css
@@ -2378,7 +2378,7 @@ a.modelviewer-close {
 
 .layout {
     min-width: 980px;
-    max-width: 1240px;
+    max-width: 1340px;
     margin: 0 auto;
 }
 
